--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -279,10 +279,9 @@ the genus vector $g$ in a non decreasing way, and every time a value
 $g_i$ strictly greater than $g_{i-1}$ is assigned, we put a division
 before $i$.
 % TODO: the following needs to be rewritten
-This means that, in the following, when we decide the
-value of a datum regarding index $i$, we can ignore the value of that
-datum for the index $i-1$, because the column $c_i$ is already bigger
-than the column $c_{i-1}$.
+This means that, when we assigning the value of $n_i$, we will allow
+the algorithm to start again from $0$ instead of $n_{i-1}$, because the column 
+$c_i$ is already bigger than the column $c_{i-1}$.
 %Otherwise, if there is not a division before $i$, we would
 %have been forced to put a value which is bigger or equal than the one
 %in position $i-1$.
@@ -294,10 +293,11 @@ greater than $n_{i-1}$. We follow this procedure also for the vector
 $l$.
 
 Finally, we start filling the rows of the matrix $a$. Here the
-procedure is a bit different, because, even if we fill only the upper
-triangular part, the conditions that the columns must be sorted
-involves also the lower triangular part. A small computation gives
-that the value of $a_{i,j}$ is assigned starting from:
+procedure is a bit different. Indeed even if for the purpose of filling 
+the matrix it is enough to deal only with the upper triangular part, 
+imposing the conditions that the columns are sorted involves also the 
+lower triangular part. A small computation gives that the value of 
+$a_{i,j}$ is assigned starting from:
 \[
 \begin{cases}
   0 & \text{if there are divisions before $i$ and $j$}\\
@@ -636,30 +636,42 @@ arguing as in the following example.
   Let $G_0 = G \in \mathcal{A}$ be the graph of the previous
   example:
   \[
-  G_0 = \psm{ 0 & 0 & 2 & 0\\ 1 & 1 & 0 & 1\\ 0 & 0 & 0 & 0\\ & 1 & 1
-    & 1\\ && 2 & 1\\ &&& 0 }\text{.}
+  G_0 = \begin{pmatrix} 0 & 0 & 2 & 0\\ 
+  1 & 1 & 0 & 1\\ 
+  0 & 0 & 0 & 0 \\ 
+  \hline 
+  \bullet & 1 & 1 & 1\\ 
+  1 &\bullet & 2 & 1 \\ 
+  1& 2&\bullet & 0\\ 
+  1&1&0& \bullet 
+  \end{pmatrix}\text{.}
   \]
   This graph is stable but not in $\mathcal{M}$ because, for example,
   $g_2 > g_3$ implies that $g_3$ is a breaking position. This is
   the smallest breaking position, thus we apply the permutation $\sigma_{2,3}$, obtaining
   the graph
   \[
-  G_1 \coloneqq \sigma_{2,3} G_0 = \psm{ 0 & 0 & 0 & 2\\
-    1 & 1 & 1 & 0\\ 0 & 0 & 0 & 0\\ & 1 & 1 & 1\\ && 1 & 2\\ &&& 0 }
+  G_1 \coloneqq \sigma_{2,3} G_0 = \begin{pmatrix} 0 & 0 & 0 & 2\\
+    1 & 1 & 1 & 0\\
+    0 & 0 & 0 & 0\\ \hline
+    \bullet & 1 & 1 & 1\\
+    1&\bullet& 1 & 2\\ 
+    1&1&\bullet& 0 \\
+    1&2&0& \bullet \end{pmatrix}
   \prec G_0\text{.}
   \]
   Now $a_{2,3}$ is the smallest breaking position; applying
   $\sigma_{1,2}$, we obtain
   \[
-  G_2 \coloneqq \sigma_{1,2} G_1 = \psm{ 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
-    0\\ 0 & 0 & 0 & 0\\ & 1 & 1 & 1\\ && 1 & 0\\ &&& 2 } \prec
+  G_2 \coloneqq \sigma_{1,2} G_1 = \begin{pmatrix} 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
+    0\\ 0 & 0 & 0 & 0\\\hline \bullet & 1 & 1 & 1\\ 1&\bullet& 1 & 0\\ 1&1&\bullet& 2 \\ 1&0&2& \bullet \end{pmatrix} \prec
   G_1\text{.}
   \]
   The new smallest breaking position is $a_{1,3}$, so applying the
   transposition $\sigma_{0,1}$ we have
   \[
-  G_3 \coloneqq \sigma_{0,1} G_2 = \psm{ 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
-    0\\ 0 & 0 & 0 & 0\\ & 1 & 1 & 0\\ && 1 & 1\\ &&& 2 } \prec
+  G_3 \coloneqq \sigma_{0,1} G_2 = \begin{pmatrix} 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
+    0\\ 0 & 0 & 0 & 0\\ \hline \bullet & 1 & 1 & 0\\ 1&\bullet& 1 & 1\\ 1&1&\bullet& 2\\ 0&1&2& \bullet \end{pmatrix} \prec
   G_2\text{.}
   \]
   The graph $G_3$ is finally in $\mathcal{M}$ and we can verify that no
