--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -636,7 +636,7 @@ arguing as in the following example.
   Let $G_0 = G \in \mathcal{A}$ be the graph of the previous
   example:
   \[
-  G_0 = \begin{pmatrix} 0 & 0 & 2 & 0\\ 
+  G_0 = \psm{ 0 & 0 & 2 & 0\\ 
   1 & 1 & 0 & 1\\ 
   0 & 0 & 0 & 0 \\ 
   \hline 
@@ -644,34 +644,34 @@ arguing as in the following example.
   1 &\bullet & 2 & 1 \\ 
   1& 2&\bullet & 0\\ 
   1&1&0& \bullet 
-  \end{pmatrix}\text{.}
+  }\text{.}
   \]
   This graph is stable but not in $\mathcal{M}$ because, for example,
   $g_2 > g_3$ implies that $g_3$ is a breaking position. This is
   the smallest breaking position, thus we apply the permutation $\sigma_{2,3}$, obtaining
   the graph
   \[
-  G_1 \coloneqq \sigma_{2,3} G_0 = \begin{pmatrix} 0 & 0 & 0 & 2\\
+  G_1 \coloneqq \sigma_{2,3} G_0 = \psm{ 0 & 0 & 0 & 2\\
     1 & 1 & 1 & 0\\
     0 & 0 & 0 & 0\\ \hline
     \bullet & 1 & 1 & 1\\
     1&\bullet& 1 & 2\\ 
     1&1&\bullet& 0 \\
-    1&2&0& \bullet \end{pmatrix}
+    1&2&0& \bullet }
   \prec G_0\text{.}
   \]
   Now $a_{2,3}$ is the smallest breaking position; applying
   $\sigma_{1,2}$, we obtain
   \[
-  G_2 \coloneqq \sigma_{1,2} G_1 = \begin{pmatrix} 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
-    0\\ 0 & 0 & 0 & 0\\\hline \bullet & 1 & 1 & 1\\ 1&\bullet& 1 & 0\\ 1&1&\bullet& 2 \\ 1&0&2& \bullet \end{pmatrix} \prec
+  G_2 \coloneqq \sigma_{1,2} G_1 = \psm{ 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
+    0\\ 0 & 0 & 0 & 0\\\hline \bullet & 1 & 1 & 1\\ 1&\bullet& 1 & 0\\ 1&1&\bullet& 2 \\ 1&0&2& \bullet } \prec
   G_1\text{.}
   \]
   The new smallest breaking position is $a_{1,3}$, so applying the
   transposition $\sigma_{0,1}$ we have
   \[
-  G_3 \coloneqq \sigma_{0,1} G_2 = \begin{pmatrix} 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
-    0\\ 0 & 0 & 0 & 0\\ \hline \bullet & 1 & 1 & 0\\ 1&\bullet& 1 & 1\\ 1&1&\bullet& 2\\ 0&1&2& \bullet \end{pmatrix} \prec
+  G_3 \coloneqq \sigma_{0,1} G_2 = \psm{ 0 & 0 & 0 & 2\\ 1 & 1 & 1 &
+    0\\ 0 & 0 & 0 & 0\\ \hline \bullet & 1 & 1 & 0\\ 1&\bullet& 1 & 1\\ 1&1&\bullet& 2\\ 0&1&2& \bullet } \prec
   G_2\text{.}
   \]
   The graph $G_3$ is finally in $\mathcal{M}$ and we can verify that no
