--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -167,7 +167,7 @@ Our task is to generate one stable graph for each isomorphism class.
 
 
 
-\section{Description of our algorithm}\label{sec:description}
+\section{Description of the algorithm}\label{sec:description}
 
 In this section we describe the general ideas of our algorithm. Let us
 first introduce the notation we use in the program.
@@ -641,19 +641,39 @@ the possibilities within a range that depends upon the values of $G$
 and $N$, and upon the values of the data that have already been
 filled.
 
+The order in which we assign the value of the data is $g$,$n$,$l$, and
+finally the upper triangular part of $a$ row after row.
+%\begin{notation}
+%  At any time during the algorithm, we let $e^{\MAX}$ be the maximum
+%  number of edges that could be placed after that time, and $c$ be the
+%  number of couples of (different) vertices already connected by an
+%  edge. We let $p_1$ be the number of vertices $i$ to which the
+%  algorithm has assigned $g_i = 0$. Note that the final value of $p_1$
+%  is determined when the first genus greater than $0$ is assigned, in
+%  particular the final value of $p_1$ is determined at the end of the
+%  assignment of the values to the vector $g$.
+%\end{notation}
 
 \begin{notation}
-  At any time during the algorithm, we let $e^{\MAX}$ be the maximum
-  number of edges that could be placed after that time, and $c$ be the
-  number of couples of (different) vertices already connected by an
-  edge. We let $p_1$ be the number of vertices $i$ to which the
-  algorithm has assigned $g_i = 0$. Note that the final value of $p_1$
-  is determined when the first genus greater than $0$ is assigned, in
-  particular the final value of $p_1$ is determined at the end of the
-  assignment of the values to the vector $g$.
+  Suppose we are assigning the $i$-th value of one of the vectors
+  $g,n$ or $l$, or the $(i,j)$-th value of $a$. We define the following
+  derived variables $e^{\MAX}$, $c$ and $p_1$ that depend upon the 
+  values that have already been assigned to $g,n,l,a$.
+  
+  We let $e^{\MAX}$ be the maximum number of edges that could be placed 
+  after that time, and $c$ be the number of couples of (different) vertices
+  already connected by an edge. We let $p_1$ be the number of vertices $i$ 
+  to which the algorithm has assigned $g_i = 0$. Note that the final value 
+  of $p_1$ is determined when the first genus greater than $0$ is assigned, 
+  in particular the final value of $p_1$ is determined at the end of the
+  assignment of the values to the vector $g$. On the other hand, $c$ starts
+  to change its value when the matrix $a$ has started to be filled.
+  
+  After the assignment of the $i$-th value, the derived values $e^{\MAX}$,
+  $c$ and $p_1$ are then updated according to the assignment itself.
 \end{notation}
 
-\begin{notation}
+\begin{notation} \label{partialassign}
   When deciding $g$, $n$, or $l$, we let $n^{(2)}_i$ be the minimum
   between $2$ and the number of half edges already assigned to the
   $i$-th vertex. This is justified by the fact that we know that at
@@ -667,7 +687,7 @@ filled.
   vertex. Finally, we define
   \begin{align*}
     G_i &\coloneqq \sum_{i^\prime < i} g_{i^\prime}\,\text{,} &
-    N_i &\coloneqq \sum_{\substack{i^\prime < i\\g_{i^\prime} = 0}} n_{i^\prime}\,\text{,}\\
+    N_i &\coloneqq \sum_{\substack{i^\prime < i}} n_{i^\prime}\,\text{,}\\
     N^{(2)} &\coloneqq \sum_{g_{i^\prime} = 0} n^{(2)}_{i^\prime}\,\text{,} &
     N^{(2)}_i &\coloneqq \sum_{\substack{i^\prime < i\\g_{i^\prime} = 0}} n^{(2)}_{i^\prime}\,\text{;}\\
     L_i &\coloneqq \sum_{i^\prime < i} l_{i^\prime}\,\text{,} &
@@ -776,7 +796,7 @@ choices for $n_i$:
 
 \subsection{Range for $l_i$}
 
-After deciding $l_i$, this is the situation:
+When deciding $l_{i}$, this is the situation:
 \begin{itemize}
 \item $e^{\MAX} = G - G_K - L_i - l_i + K - 1 \geq K-1$, and the
   maximum number of half edges coming from edges to assign is
@@ -799,7 +819,7 @@ The conditions on $l_i$ are then the following:
   stabilize it; hence,
   \begin{align*}
     &\max(0, 2-n_z-2l_z) \leq G - G_K - L_i - l_i + K - 1\\
-    &\qquad\Rightarrow l_i \leq G - G_k - L_i + K - 3 + n_z + 2l_z
+    &\qquad\Rightarrow l_i \leq G - G_K - L_i + K - 3 + n_z + 2l_z
   \end{align*}
 \item assume $g_i = 0$; if $l_i > 0$, we are adding to the $i$-th
   vertex $2-n^{(2)}_i$ stabilizing half edges, and to stabilize the
@@ -822,13 +842,16 @@ The conditions on $l_i$ are then the following:
 
 \subsection{Range for $a_{i,j}$}
 
-After deciding $a_{i,j}$, this is the situation:
+When deciding $a_{i,j}$, this is the situation:
 \begin{itemize}
-\item in this section, the word ``stabilized'' goes back to its
-  original meaning, i.e., it means ``with at least $3$ half edges'';
-  this is necessary since here we may have already placed some
-  non-loop edges, hence we cannot track easily which vertices already
-  are connected to the rest of the graph and which are not;
+\item earlier in Notation \ref{partialassign}, we observed that for the
+	purpose of filling the vectors $g$,$n$ and $l$ we could consider a genus $0$
+	vertex stabilized when it had at least two half-edges (since the graph
+	is going to be connected eventually). When assigning the values of $a$ instead,
+	a vertex is considered to be stabilized when it has at least $3$ half edges. 
+	This is necessary here since we may have already assigned some
+  non-loop edges, and it would not be easy to keep track of which of the 
+  vertices are already connected to the rest of the graph;
 \item $e^{\MAX} = G - G_K - L_K - A_{i,j} + K - 1$;
 \item we have already placed edges between $c$ couples of different
   vertices;
@@ -861,8 +884,8 @@ Here are the constraints that $a_{i,j}$ must satisfy:
   \end{align*}
 \item if $j = K-1$ (that is, if this is the last chance to add half
   edges to the $i$-th vertex), then we add enough edges from $i$ to
-  $K-1$ in order to stabilize it; moreover, if up to now we did not
-  place any non-loop edge on it, we impose $a_{i,K-1} > 0$.
+  $K-1$ in order to stabilize the vertex $i$; moreover, if up to now we did not
+  place any non-loop edge on the vertex $i$, we impose $a_{i,K-1} > 0$.
 \end{enumerate}
 
 
