--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -318,12 +318,12 @@ before $j$ if $a_{i,j} > a_{i,j-1}$.
 
 We cannot conclude immediately that this procedure gives us all
 possible data up to permutations as in the case of a single
-vector. This is because the transformation that the matrix undergo
+vector. This is because the transformation that the whole matrix undergoes
 when a permutation is applied is more complicated: for the first three
-rows, it just permutes the columns, but for the remaining rows, it
-permutes both rows and columns. Indeed, to prove that the procedure of
-generating only ordered columns does not miss any stable graph is the
-content of the following section.
+rows (the vectors $g,n,l$), it just permutes the columns, but for the 
+remaining rows, it permutes both rows and columns. Indeed, to prove that 
+the procedure of generating only ordered columns does not miss any stable 
+graph is the content of the following section.
 
 
 
