--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -48,9 +48,9 @@
   available at \href{http://people.sissa.it/~maggiolo/boundary/}
   {\texttt{http://people.sissa.it/\~{}maggiolo/boundary/}}. Given two
   natural numbers $g$ and $n$ satisfying $2g+n-2>0$, the program
-  generates all genus $g$ stable graphs with $n$ marked points. Each
+  generates all genus $g$ stable graphs with $n$ unordered marked points. Each
   such graph determines the topological type of a nodal stable curve
-  of arithmetic genus $g$ with $n$ marked points. Our motivation comes
+  of arithmetic genus $g$ with $n$ unordered marked points. Our motivation comes
   from the fact that the boundary of the moduli space of stable genus
   $g$, $n$-pointed curves can be stratified by taking loci of curves
   of a fixed topological type.
@@ -75,16 +75,16 @@ curves with finite automorphism group. These curves are called
 \emph{stable curves} (or pointed stable curves). The topology of one
 such curve is encoded in a combinatorial object, called \emph{stable
   graph}.  The boundary of the moduli space admits a topological
-stratification, whose elements are curves with a fixed topological
-type and a prescribed assignment of the marked points on each
-irreducible component.
+stratification, made of loci whose points are curves with a fixed
+topological type and a prescribed assignment of the marked points on
+each irreducible component.
 
 The combinatorics of the stable graphs have been investigated in
 several papers in algebraic geometry, for many different purposes (see
 for instance~\cite{modularoperads,opstall,opstall2,stephanie2}). Our
 aim with this program is to provide a useful and effective tool to
-generate all the stable graphs of genus $g$ with $n$ marked points up
-to isomorphism, for low values of $g$ and $n$.
+generate all the stable graphs of genus $g$ with $n$ unordered marked
+points up to isomorphism, for low values of $g$ and $n$.
 
 We construct an algorithm to generate all the stable graphs of genus
 $g$ with $n$ unordered marked points. The algorithm uses the software
@@ -92,13 +92,13 @@ $g$ with $n$ unordered marked points. The algorithm uses the software
 list of graphs thus created. Since to check that two stable graphs are
 isomorphic is computationally onerous, we try to generate a low number
 of stable graphs, provided that we want at least one for every
-equivalence class. The algorithm generates recursively the vectors of
-genera, marked points, and the adjacency matrix. While it fills these
-data, it checks the stability condition and the condition on the total
-genus as early as possible, in order to minimize the time spent on the
-branches of the recursion that do not lead to stable graphs. Some
-analysis of the algorithm's performances can be seen in
-Section~\ref{sec:performance}.
+isomorphism class. The algorithm generates recursively the vectors of
+genera, number of marked points, number of loops, and the adjacency
+matrix. While it fills these data, it checks the stability condition
+and the condition on the total genus as early as possible, in order to
+minimize the time spent on the branches of the recursion that do not
+lead to stable graphs. Some analysis of the algorithm's performances
+can be seen in Section~\ref{sec:performance}.
 
 Programs for enumerative computations on
 $\overline{\mathcal{M}}_{g,n}$ have been implemented in both Maple and
@@ -110,11 +110,11 @@ Corollary~5.3).
 
 
 
-\section{What to generate}
+\section{Stable modular graphs}
 
 From now on, we fix two natural numbers $G$ and $N$ such that $2
 G-2+N>0$.  For every $K \in \bN^+$, we define $\ubar{K} = \{0, \dots,
-K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
+K-1\}$ and $\Sigma_K$ to be the symmetric group on the set $\ubar{K}$.
 
 \begin{definition}
   \mbox{}
@@ -122,8 +122,8 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
   \item An \emph{undirected multigraph\/} $\graph$ is a couple $(V,
     E)$ with $V$ a finite set of \emph{vertices\/} and $E$ a finite
     multiset of \emph{edges\/} with elements in $V \times V/\Sigma_2$.
-  \item The multiplicity of $(v, w)$ in $E$ is denoted by $\mult(v,
-    w)$.
+  \item The multiplicity of the edge $(v, w)$ in $E$ is denoted by
+    $\mult(v, w)$.
   \item The \emph{total multiplicity\/} of $\graph$, or its
     \emph{number of edges}, is $\abs{E}$: the cardinality of $E$ as a
     multiset.
@@ -154,13 +154,9 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
 
 \begin{notation}
   The number $\deg v + n_v$ is often called the \emph{number of half
-    edges} associated to the vertex $v$. It is the number of edges
-  that connect $v$ to another vertex plus the number of marked points
-  of $v$. Condition \ref{it:condition stability} can be rephrased in:
-  for every vertex $v$ of genus $0$, its number of half edges is at
-  least $3$.
-  %In Section \ref{sec:ranges} we will also use the following terminology:
-  %the number of half edges
+    edges\/} associated to the vertex $v$. Condition \ref{it:condition
+    stability} can be rephrased in: for every vertex $v$ of genus $0$,
+  its number of half edges is at least $3$.
 \end{notation}
 
 Two stable graphs $\graph = (V, E, g, n)$ and $\graph^\prime =
@@ -193,9 +189,9 @@ first introduce the notation we use in the program.
   multiplicity of the edge between $i$ and $j$ will be denoted by
   $a_{i,j}$: the symmetric matrix $a$ is called the \emph{adjacency
     matrix} of the stable graph. For convenience, we will denote $l_j
-  \eqqcolon a_{j,j}$: it is the vector whose elements are the loops at
-  the vertex $j$. For simplicity, we will consider $g_j$, $n_j$,
-  $l_j$, $a_{i,j}$ to be defined also for $i$ or $j$ outside
+  \coloneqq a_{j,j}$: it is the vector whose elements are the number
+  of loops at the vertex $j$. For simplicity, we will consider $g_j$,
+  $n_j$, $l_j$, $a_{i,j}$ to be defined also for $i$ or $j$ outside
   $\ubar{K}$, in which case their value is always assumed to be $0$.
 \end{notation}
 
@@ -235,7 +231,7 @@ $G$ with $N$ marked points.
 % Now let us focus on \underline{the first principle}.
 
 A priori, for each entry of $g$, $n$, $l$, and $a$ the program tries
-to fill that position with all the integers. This of course is not
+to fill that position with all the integers. This is of course not
 possible, indeed it is important to observe here that each datum is
 bounded. From below, a trivial bound is $0$, that is, no datum can be
 negative. Instead, a simple upper bound can be given for each entry of
@@ -246,12 +242,14 @@ condition on the total genus (Condition~\ref{def:stable graph}).
 These bounds are coarse: Section \ref{sec:ranges} will be devoted to
 proving sharper bounds, from above and from below. Also, we will make
 these bounds dynamical: for instance assigning the value $g_0 > 0$
-clearly lowers the bound for $g_j, j > 0$. In any case once we know
-that there are bounds, we are sure that the recursion terminates.
+clearly lowers the bound for $g_j, j > 0$. The improvement of these
+bounds is crucial for the performance of the algorithm. In any case,
+once we know that there are bounds, we are sure that the recursion
+terminates.
 
-The algorithm follows the following principle: we want to generate the
-smallest possible number of couples of isomorphic stable graphs. Here
-we generalize the idea that to generate a vector for every class of
+The algorithm follows this principle: we want to generate the smallest
+possible number of couples of isomorphic stable graphs. To do so, we
+generalize the idea that to generate a vector for every class of
 vectors of length $K$ modulo permutations, the simplest way is to
 generate vectors whose entries are increasing. The program fills the
 data row by row in the matrix:
@@ -295,9 +293,9 @@ the genus vector $g$ in a non decreasing way, and every time a value
 $g_j$ strictly greater than $g_{j-1}$ is assigned, we put a division
 before $j$.
 % TODO: the following needs to be rewritten
-This means that, when assigning the value of $n_j$, we allow
-the algorithm to start again from $0$ instead of $n_{j-1}$, because the column
-$c_j$ is already bigger than the column $c_{j-1}$.
+This means that, when assigning the value of $n_j$, we allow the
+algorithm to start again from $0$ instead of $n_{j-1}$, because the
+column $c_j$ is already bigger than the column $c_{j-1}$.
 % Otherwise, if there is not a division before $i$, we would have been
 % forced to put a value which is bigger or equal than the one in
 % position $i-1$.
@@ -379,7 +377,7 @@ of $\ubar{K}$. The idea is to give a characterization
 $\mathcal{M}$.
 
 Recall first that the algorithm generates only matrices whose columns
-are ordered as described in Section~\ref{sec:description}. More
+are ordered, as described in Section~\ref{sec:description}. More
 explicitly, if $G = (g, n, l, a) \in \mathcal{A}$, then $G \in
 \mathcal{M}$ if and only if:
 \begin{multline*}
@@ -417,7 +415,7 @@ upper triangular part of $a$. For example, if
 \]
 (with the same structure as~\eqref{eq:big matrix}), then we define
 \[
-v(G) := (0, 0, 2, 0,\quad 1, 1, 0, 1,\quad 0, 0, 0, 0,\quad 1, 1,
+v(G) \coloneqq (0, 0, 2, 0,\quad 1, 1, 0, 1,\quad 0, 0, 0, 0,\quad 1, 1,
 1,\quad 2, 1,\quad 0)\,\text{.}
 \]
 
@@ -432,7 +430,7 @@ with the partial order described in
 Section~\ref{sec:description}. From now on we will always refer to the
 latter order on $\mathcal{A}$.
 
-\begin{notation}
+\begin{remark}
   If $\sigma \in \Sigma_K$ is a permutation and $G = (g, n, l, a)$ is
   a graph, then we can apply $\sigma$ to the entries of the data of
   $G$, obtaining an isomorphic graph. The action of $\sigma$ on $G$
@@ -442,7 +440,7 @@ latter order on $\mathcal{A}$.
   a_{\sigma(i),\sigma(j)}$. We denote this new matrix by $\sigma
   G$. We write $\sigma_{i,j}$ for the element of $\Sigma_K$ that
   corresponds to the transposition of $i, j \in \ubar{K}$.
-\end{notation}
+\end{remark}
 
 Now we are able to state the characterization we need to prove
 Proposition~\ref{prop:main}.
@@ -461,9 +459,9 @@ Proposition~\ref{prop:main}.
   breaking position.
 
   Assume there is at least one breaking position in $G$. If there is
-  one in $g$, $n$, or $l$, it is trivial to see that transposing that
-  index with the previous one gives a smaller matrix. If this is not
-  the case, let $a_{i,j}$ be a breaking position such that
+  one in $g$, $n$, or $l$, it is trivial to see that transposing the
+  corresponding index with the previous one gives a smaller matrix. If
+  this is not the case, let $a_{i,j}$ be a breaking position such that
   $a_{i^\prime,j}$ is not a breaking position whenever $i^\prime < i$
   (the position $(i,j)$ is the first breaking position of its
   column). We deduce that $g_{j-1} = g_j$, $n_{j-1} = n_j$, $l_{j-1} =
@@ -477,7 +475,7 @@ Proposition~\ref{prop:main}.
   \item If $j > i$, the smallest breaking position is in the upper
     triangular part of $a$; it is then clear that $H \prec G$.
   \item If $j < i$, the smallest breaking position is in the lower
-    triangular part; by using the symmetry of the matrix $a$ again we
+    triangular part; by using the symmetry of the matrix $a$ we again
     obtain $H \prec G$ (see the right part of Figure~\ref{fig:a}).
   \end{itemize}
 
@@ -534,9 +532,9 @@ Proposition~\ref{prop:main}.
   Conversely, let $j$ be such that $H \coloneqq \sigma_{j-1,j} G \prec
   G$. Then consider the first entry (reading from left to right) of
   the vector $v(G)$ that is strictly bigger than $v(H)$. This is a
-  breaking position. If it occurs in the matrix $a$ (equivalently, in
-  the last $K$ rows), it is actually the smallest breaking position of
-  its column.
+  breaking position. Notice that if it occurs in the matrix $a$
+  (equivalently, in the last $K$ rows), it is actually the first
+  breaking position of its column.
 \end{proof}
 
 % If the first difference between $G$ and $H$ lies in $g$, $n$, or
@@ -575,7 +573,8 @@ The proof of Proposition~\ref{prop:main} follows arguing as in this
 example.
 
 \begin{example}
-  Let $G_0 = G \in \mathcal{A}$ be the graph of the previous example:
+  Let $G_0 \coloneqq G \in \mathcal{A}$ be the graph of the previous
+  example:
   \[
   G_0 = \psm{
     0 & 0 & 2 & 0\\
@@ -659,15 +658,17 @@ example.
 
 In the previous section we have introduced the algorithm, by
 describing the divisions. In this section we introduce accurate ranges
-for the possible values of $g,n,l$ and $a$. In particular we try to
-obtain estimates on the upper extremum for each datum to be filled.
+for the possible values of $g, n, l$ and $a$.
 
 We will deduce from the conditions of Definition~\ref{def:stable
   graph} some other necessary conditions that can be checked before
 the graph is defined in its entirety. More precisely, every single
 datum is assigned trying all the possibilities within a range that
 depends upon the values of $G$ and $N$, and upon the values of the
-data that have already been filled.
+data that have already been filled. The conditions we describe in the
+following are not all the possible that can be enforced; we tried
+other possibilities, but heuristically the others we tried do not give
+any improvement.
 
 The order in which we assign the value of the data is $g$,$n$,$l$, and
 finally the upper triangular part of $a$ row after row.
@@ -708,15 +709,16 @@ finally the upper triangular part of $a$ row after row.
 \begin{notation} \label{not:partial_assign}
   When deciding $g$, $n$, or $l$, we let $n^{(2)}_i$ be the minimum
   between $2$ and the number of half edges already assigned to the
-  $i$-th vertex. This is justified by the fact that we know that at
-  least one half edge will be assigned to the $i$-th vertex to connect
-  it to the rest of the graph. Hence, whenever $g_i = 0$, $n^{(2)}_i$
-  is the number of \emph{stabilizing\/} half edges at the vertex $i$:
-  one half edge is needed to connect the vertex to the rest of the
-  graph, and then at least two more half edges are needed to stabilize
-  the vertex. When deciding $a_{i,j}$, it is also useful to have
-  defined $h_i$, the total number of half edges that hit the $i$-th
-  vertex. Finally, we define
+  $i$-th vertex. This is justified by the fact that we know that, when
+  we will fill the matrix $a$, we will increase by one the number of
+  half edges at the vertex $i$ in order to connect it to the rest of
+  the graph. Hence, whenever $g_i = 0$, $n^{(2)}_i$ is the number of
+  \emph{stabilizing\/} half edges at the vertex $i$: one half edge is
+  needed to connect the vertex to the rest of the graph, and then at
+  least two more half edges are needed to stabilize the vertex. When
+  deciding $a_{i,j}$, it is also useful to have defined $h_i$, the
+  total number of half edges that hit the $i$-th vertex. Finally, we
+  define
   \begin{align*}
     G_i &\coloneqq \sum_{i^\prime < i} g_{i^\prime}\,\text{,} &
     N_i &\coloneqq \sum_{\substack{i^\prime < i}} n_{i^\prime}\,\text{,}\\
@@ -733,6 +735,7 @@ following the order of the recursions of our algorithm. Each range is
 described by presenting a first list of general constraints on the
 parameters and then by presenting a second list containing the actual
 ranges in the last line.
+
 
 
 \subsection{Range for $g_i$}
@@ -816,8 +819,8 @@ choices for $n_i$:
 \item if $g_i = 0$, for the purpose of stabilizing the first $i+1$
   curves we cannot use marked points anymore, therefore we have
   \begin{align*}
-    &2 (i+1) - N^{(2)}_i - n^{(2)}_i \leq (2(G - G_K) + K - 2)\\
-    &\quad\Rightarrow n^{(2)}_i = \min(2, n_i) \geq - (2(G - G_K) + K - 2) + (2(i+1) - N^{(2)}_i)\\
+    &2 (i+1) - N^{(2)}_i - n^{(2)}_i \leq \bigl(2(G - G_K) + K - 2\bigr)\\
+    &\quad\Rightarrow n^{(2)}_i = \min(2, n_i) \geq - \bigl(2(G - G_K) + K - 2) + (2(i+1) - N^{(2)}_i\bigr)\\
     &\quad\Rightarrow
     \begin{cases}
       \text{impossible} & \text{if $\mathrm{RHS} > 2$}\\
@@ -859,8 +862,8 @@ The conditions on $l_i$ are then the following:
   vertex $2-n^{(2)}_i$ stabilizing half edges, and to stabilize the
   $p_1$ genus $0$ vertices, we need to have
   \begin{align*}
-    &2 p_1 - N^{(2)} - (2-n^{(2)}_i) \leq 2e^{\MAX} - K\\
-    &\quad\Rightarrow 2p_1 - N^{(2)} - (2-n^{(2)}_i) \max(0, 2-m_i) \leq 2(G - G_K - L_i - l_i + K - 1) - K\\
+    &2 p_1 - N^{(2)} - \bigl(2-n^{(2)}_i\bigr) \leq 2e^{\MAX} - K\\
+    &\quad\Rightarrow 2p_1 - N^{(2)} - \bigl(2-n^{(2)}_i\bigr) \max(0, 2-m_i) \leq 2(G - G_K - L_i - l_i + K - 1) - K\\
     &\quad\Rightarrow 2l_i \leq 2(G - G_K - L_i) + K + N^{(2)} - n^{(2)}_i - 2p_i\,\text{.}
   \end{align*}
 \item assume $g_i = 0$; after deciding $l_i$, we still have $e^{\MAX}$
@@ -914,8 +917,8 @@ Here are the constraints that $a_{i,j}$ must satisfy:
   3-h_j)$ stabilizing half edges; hence, to stabilize the $p_1$ genus
   $0$ vertices, we need
   \begin{align*}
-    &3p_1 - \sum_{g_{i^\prime} = 0} \min(3, n_i + 2l_i) - (\max(0, 3-h_i) + \max(0, 3-h_j)) \leq 2 (e^{\MAX} - a_{i,j})\\
-    &\quad\Rightarrow 3p_1 - \sum_{g_{i^\prime} = 0} \min(3, n_i + 2l_i) - (\max(0, 3-h_i) + \max(0, 3-h_j)) \leq \\
+    &3p_1 - \sum_{g_{i^\prime} = 0} \min(3, n_i + 2l_i) - \bigl(\max(0, 3-h_i) + \max(0, 3-h_j)\bigr) \leq 2 (e^{\MAX} - a_{i,j})\\
+    &\quad\Rightarrow 3p_1 - \sum_{g_{i^\prime} = 0} \min(3, n_i + 2l_i) - \bigl(\max(0, 3-h_i) + \max(0, 3-h_j)\bigr) \leq \\
     &\quad\quad\quad \leq 2 (G - G_K - L_K - A_{i,j} + K - 1 - a_{i,j})\\
     &\quad\Rightarrow 2a_{i,j} \leq 2 (G - G_K - L_K - A_{i,j} + K - 1) - 3p_1 +\\
     &\quad\quad\quad +\sum_{g_{i^\prime} = 0} \min(3, n_i + 2l_i) + \max(0, 3-h_i) + \max(0, 3-h_j)\,\text{.}
@@ -976,7 +979,9 @@ parallelized implementation of the program.
     6 &  1 & 226 &   962,172\\
     7 &  0 & 681 & 1,281,678
   \end{tabular}\vspace{\baselineskip}
-  \caption{For small $G$, the maximum $N$ such that all stable graphs of type $(G,N)$ can be computed in less than $15$ minutes.}\label{tab:number}
+  \caption{For small $G$, the maximum $N$ such that all stable graphs
+    of type $(G,N)$ can be computed in less than $15$ minutes.}
+  \label{tab:number}
 \end{table}
 
 In Table~\ref{tab:number} we list, for each genus $G$, the maximum
